[gd_scene load_steps=53 format=2]

[ext_resource path="res://assets/tiles/environment/layers/sliced-tileset/ground.png" type="Texture" id=1]
[ext_resource path="res://assets/tiles/environment/layers/sliced-tileset/window.png" type="Texture" id=2]
[ext_resource path="res://assets/tiles/environment/layers/sliced-tileset/ground-corner.png" type="Texture" id=3]
[ext_resource path="res://assets/tiles/environment/layers/sliced-tileset/left-corner.png" type="Texture" id=4]
[ext_resource path="res://assets/tiles/environment/layers/sliced-tileset/right-corner.png" type="Texture" id=5]
[ext_resource path="res://assets/tiles/environment/layers/sliced-tileset/wall.png" type="Texture" id=6]
[ext_resource path="res://assets/background/background.png" type="Texture" id=7]
[ext_resource path="res://assets/tiles/environment/props/houses.png" type="Texture" id=8]
[ext_resource path="res://assets/tiles/environment/layers/sliced-tileset/ground-right-corner.png" type="Texture" id=9]
[ext_resource path="res://assets/tiles/environment/layers/sliced-tileset/ground-wall-b.png" type="Texture" id=10]
[ext_resource path="res://assets/background/middleground.png" type="Texture" id=11]
[ext_resource path="res://assets/tiles/environment/props/props.png" type="Texture" id=12]
[ext_resource path="res://assets/tiles/environment/layers/sliced-tileset/ground-b.png" type="Texture" id=13]
[ext_resource path="res://assets/tiles/environment/layers/sliced-tileset/wall-b.png" type="Texture" id=14]
[ext_resource path="res://assets/tiles/environment/layers/sliced-tileset/ground-wall.png" type="Texture" id=15]
[ext_resource path="res://assets/tiles/environment/layers/sliced-tileset/shadow.png" type="Texture" id=16]
[ext_resource path="res://scenes/characters/midBornPlayer.tscn" type="PackedScene" id=17]
[ext_resource path="res://scripts/levels.gd" type="Script" id=18]
[ext_resource path="res://scenes/characters/bandit_npc.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/characters/shady_guy_npc.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/characters/drunk_man_npc.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/characters/lowborn_child.tscn" type="PackedScene" id=22]
[ext_resource path="res://scripts/objects/event_trigger2.gd" type="Script" id=23]
[ext_resource path="res://scripts/objects/event_trigger.gd" type="Script" id=24]
[ext_resource path="res://scripts/objects/knight_dialogue_side_quest.gd" type="Script" id=25]
[ext_resource path="res://scenes/objects/Attack_instruction.tscn" type="PackedScene" id=26]
[ext_resource path="res://scenes/objects/desicion_box.tscn" type="PackedScene" id=27]
[ext_resource path="res://scenes/characters/killable_knight.tscn" type="PackedScene" id=28]
[ext_resource path="res://scenes/objects/flexible_dialogues.tscn" type="PackedScene" id=29]
[ext_resource path="res://scripts/objects/Attack_instruction.gd" type="Script" id=30]
[ext_resource path="res://scenes/objects/key_e.tscn" type="PackedScene" id=31]
[ext_resource path="res://scripts/objects/go_between_levels.gd" type="Script" id=32]
[ext_resource path="res://scripts/objects/event_finished_timer.gd" type="Script" id=33]
[ext_resource path="res://scripts/objects/event_trigger4.gd" type="Script" id=34]
[ext_resource path="res://scenes/objects/mini_hint.tscn" type="PackedScene" id=35]
[ext_resource path="res://scripts/objects/mini_hint.gd" type="Script" id=36]
[ext_resource path="res://scripts/npc/shady_guy_npc.gd" type="Script" id=37]
[ext_resource path="res://scripts/objects/flexible_dialogues_drug_vendor.gd" type="Script" id=38]
[ext_resource path="res://scripts/objects/desicion_box_drug_vendor.gd" type="Script" id=39]
[ext_resource path="res://scripts/npc/bandit_npc.gd" type="Script" id=40]
[ext_resource path="res://scenes/objects/dialogue.tscn" type="PackedScene" id=41]

[sub_resource type="TileSet" id=20]
0/name = "wall"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "wall2"
1/texture = ExtResource( 14 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "floor"
2/texture = ExtResource( 13 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 16, 48 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "wall_groundL"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 48, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "wall_groundR"
4/texture = ExtResource( 9 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 16, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "ground_wall"
5/texture = ExtResource( 10 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 48, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "ground_wall2"
6/texture = ExtResource( 15 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "door"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 32, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "right_corner"
8/texture = ExtResource( 5 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 16, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "shadow"
9/texture = ExtResource( 16 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 16, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "left_corner"
10/texture = ExtResource( 4 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 32, 32 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0

[sub_resource type="TileSet" id=21]
0/name = "sign"
0/texture = ExtResource( 12 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 112, 16, 48, 48 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "barrel"
1/texture = ExtResource( 12 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 160, 32, 48, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "box"
2/texture = ExtResource( 12 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 16, 96, 48, 48 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "boxes"
3/texture = ExtResource( 12 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 16, 0, 80, 80 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "lights"
4/texture = ExtResource( 12 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 224, 48, 32, 112 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "hey_car"
5/texture = ExtResource( 12 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 96, 80, 112, 80 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "well"
6/texture = ExtResource( 12 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 256, 80, 80, 80 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[sub_resource type="TileSet" id=22]
0/name = "house1"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 64, 176, 192 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "house2"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 240, 0, 208, 256 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "house3"
2/texture = ExtResource( 8 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 464, 64, 224, 192 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 16, 32, 0, 32, 0, 16, 16, 16 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 16, 32, 0, 32, 0, 16, 16, 16 )

[sub_resource type="TileSet" id=23]
0/name = "ground"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 48 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 18 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "ground_b"
1/texture = ExtResource( 13 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 48 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 19 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 13, 25 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 18, 32 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 18, 32 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 14, 26 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 10, 25 )

[node name="secundaryZone" type="Node2D"]
script = ExtResource( 18 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [ 2096.0 ]
}

[node name="wall" type="TileMap" parent="."]
position = Vector2( 48, 296 )
tile_set = SubResource( 20 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -393091, 10, 0, -393089, 0, 0, -327553, 0, 0, -262019, 10, 0, -262017, 0, 0, -196481, 0, 0, -130947, 10, 0, -130945, 0, 0, -65409, 0, 0, 125, 10, 0, 127, 0, 0, 65663, 1, 0, 131197, 10, 0, 131199, 1, 0, 196734, 1, 0, 196735, 1, 0, 262269, 10, 0, 262271, 0, 0, 327807, 1, 0, 393341, 10, 0, 393343, 1, 0, 458877, 10, 0, 458879, 1, 0, 524415, 0, 0, 589949, 10, 0, 589951, 0, 0, 655487, 0, 0, 721021, 10, 0, 721023, 0, 0, 786559, 0, 0, 852093, 10, 0, 852095, 0, 0, 917631, 0, 0, 983165, 3, 0 )

[node name="backProps" type="TileMap" parent="."]
position = Vector2( 48, 296 )
tile_set = SubResource( 21 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 786444, 3, 0, 786454, 3, 0, 786477, 2, 0, 917522, 2, 0, 917538, 2, 0, 917549, 2, 0 )

[node name="houses" type="TileMap" parent="."]
position = Vector2( 48, 296 )
tile_set = SubResource( 22 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 327682, 0, 0, 327704, 0, 0, 327715, 0, 0, 327726, 0, 0, 327746, 0, 0, 327786, 2, 0 )

[node name="floor" type="TileMap" parent="."]
position = Vector2( 48, 296 )
tile_set = SubResource( 23 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1114109, 0, 0, 1114110, 1, 0, 1114111, 0, 0, 1048576, 1, 0, 1048577, 0, 0, 1048578, 1, 0, 1048579, 0, 0, 1048580, 1, 0, 1048581, 0, 0, 1048582, 1, 0, 1048583, 0, 0, 1048584, 1, 0, 1048585, 0, 0, 1048586, 1, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 1, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1048608, 0, 0, 1048609, 0, 0, 1048610, 0, 0, 1048611, 1, 0, 1048612, 1, 0, 1048613, 1, 0, 1048614, 1, 0, 1048615, 1, 0, 1048616, 1, 0, 1048617, 1, 0, 1048618, 1, 0, 1048619, 1, 0, 1048620, 1, 0, 1048621, 0, 0, 1048622, 1, 0, 1048623, 0, 0, 1048624, 0, 0, 1048625, 1, 0, 1048626, 0, 0, 1048627, 0, 0, 1048628, 1, 0, 1048629, 0, 0, 1048630, 1, 0, 1048631, 0, 0, 1048632, 1, 0, 1048633, 1, 0, 1048634, 0, 0, 1048635, 1, 0, 1048636, 0, 0, 1048637, 1, 0, 1048638, 0, 0, 1048639, 1, 0, 1048640, 1, 0, 1048641, 0, 0, 1048642, 1, 0, 1048643, 0, 0, 1048644, 1, 0, 1048645, 0, 0, 1048646, 0, 0, 1048647, 0, 0, 1048648, 0, 0, 1048649, 0, 0, 1048650, 0, 0, 1048651, 0, 0, 1048652, 0, 0, 1048653, 0, 0, 1048654, 0, 0, 1048655, 0, 0, 1048656, 0, 0, 1048657, 0, 0, 1048658, 0, 0, 1048659, 0, 0, 1048660, 0, 0, 1048661, 1, 0, 1048662, 1, 0, 1048663, 1, 0, 1048664, 0, 0, 1048665, 1, 0, 1048666, 1, 0, 1048667, 0, 0, 1048668, 1, 0, 1048669, 0, 0, 1048670, 1, 0, 1048671, 1, 0, 1048672, 0, 0, 1048673, 1, 0, 1048674, 1, 0, 1048675, 1, 0, 1048676, 0, 0, 1048677, 1, 0, 1048678, 0, 0, 1048679, 1, 0, 1048680, 0, 0, 1048681, 0, 0, 1048682, 1, 0, 1048683, 1, 0, 1048684, 0, 0, 1048685, 1, 0, 1048686, 1, 0, 1048687, 0, 0, 1048688, 1, 0, 1048689, 0, 0, 1048690, 0, 0, 1048691, 0, 0, 1048692, 1, 0, 1048693, 1, 0, 1048694, 0, 0, 1048695, 1, 0, 1048696, 1, 0, 1048697, 0, 0, 1048698, 1, 0, 1048699, 0, 0, 1048700, 1, 0, 1048701, 1, 0, 1048702, 1, 0, 1048703, 0, 0 )

[node name="props" type="TileMap" parent="."]
position = Vector2( 48, 296 )
tile_set = SubResource( 21 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 655463, 4, 0, 917531, 2, 0, 983055, 1, 0, 983060, 1, 0, 983064, 1, 0, 983088, 1, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="cielo" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 595, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/cielo"]
position = Vector2( 288, 384 )
scale = Vector2( 1.55, 1.4 )
texture = ExtResource( 7 )

[node name="casas" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 1 )
motion_mirroring = Vector2( 768, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/casas"]
position = Vector2( 0, 256 )
scale = Vector2( 1, 1.1 )
texture = ExtResource( 11 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 768, 288 )

[node name="Bandit" parent="." instance=ExtResource( 19 )]
position = Vector2( 584, 544 )
scale = Vector2( 1.2, 1.2 )
script = ExtResource( 40 )

[node name="dialogue" parent="Bandit" instance=ExtResource( 41 )]
dialogue_file = "res://dialogues/extra_secondary_mission/bandit.json"

[node name="key_e" parent="Bandit" instance=ExtResource( 31 )]
position = Vector2( 0, -26.6667 )
scale = Vector2( 0.8, 0.9 )

[node name="Bandit2" parent="." instance=ExtResource( 19 )]
position = Vector2( 1128, 544 )
scale = Vector2( 1.2, 1.2 )

[node name="shady_guy_npc" parent="." instance=ExtResource( 20 )]
position = Vector2( 224, 544 )
scale = Vector2( 1.2, 1.2 )
script = ExtResource( 37 )

[node name="key_e" parent="shady_guy_npc" instance=ExtResource( 31 )]
position = Vector2( 0.833328, -28.3333 )
scale = Vector2( 0.8, 0.9 )

[node name="flexible_dialogues" parent="shady_guy_npc" instance=ExtResource( 29 )]
margin_left = -99.1667
margin_top = -87.5
margin_right = -59.1667
margin_bottom = -47.5
rect_scale = Vector2( 0.694932, 0.685727 )
script = ExtResource( 38 )
dialogue_file = "res://dialogues/extra_secondary_mission/drug_vendor.json"

[node name="desicion_box" parent="shady_guy_npc" instance=ExtResource( 27 )]
margin_left = -85.8333
margin_top = -142.5
margin_right = -45.8333
margin_bottom = -102.5
rect_scale = Vector2( 0.748149, 0.855177 )
script = ExtResource( 39 )

[node name="drunk_man6_npc" parent="." instance=ExtResource( 21 )]
position = Vector2( 816, 544 )
scale = Vector2( 1.2, 1.2 )
script = null

[node name="drunk_man6_npc2" parent="." instance=ExtResource( 21 )]
position = Vector2( 432, 544 )
scale = Vector2( 1.2, 1.2 )
script = null

[node name="lowborn_child" parent="." instance=ExtResource( 22 )]
position = Vector2( 1360, 552 )
scale = Vector2( 0.75, 0.75 )

[node name="desicion_box" parent="lowborn_child" instance=ExtResource( 27 )]
margin_left = -170.667
margin_top = -201.333
margin_right = -130.667
margin_bottom = -161.333

[node name="flexible_dialogues" parent="lowborn_child" instance=ExtResource( 29 )]
margin_left = -234.667
margin_top = -137.333
margin_right = -194.667
margin_bottom = -97.3333
rect_scale = Vector2( 1.01704, 1.06223 )
dialogue_file = "res://dialogues/extra_secondary_mission/meeting.json"

[node name="event_finished_timer" type="Timer" parent="lowborn_child"]
wait_time = 1.5
one_shot = true
script = ExtResource( 33 )

[node name="event_trigger" type="Area2D" parent="."]
position = Vector2( 1320, 552 )
script = ExtResource( 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="event_trigger"]
position = Vector2( -29, -13 )
shape = SubResource( 24 )

[node name="event_trigger2" type="Area2D" parent="."]
position = Vector2( 1168, 552 )
collision_layer = 8
collision_mask = 8
script = ExtResource( 23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="event_trigger2"]
position = Vector2( 13, -15 )
shape = SubResource( 24 )

[node name="player" parent="." instance=ExtResource( 17 )]
position = Vector2( 48, 548 )
scale = Vector2( 0.85, 0.85 )

[node name="killable_knight" parent="." instance=ExtResource( 28 )]
position = Vector2( 944, 544 )
scale = Vector2( 1.2, 1.2 )

[node name="death_timer" type="Timer" parent="killable_knight"]
wait_time = 2.0
one_shot = true

[node name="flexible_dialogues_kinght" parent="." instance=ExtResource( 29 )]
visible = false
margin_left = 1168.0
margin_top = 448.0
margin_right = 1208.0
margin_bottom = 488.0
rect_scale = Vector2( 0.860181, 0.815004 )
script = ExtResource( 25 )
dialogue_file = "res://dialogues/extra_secondary_mission/knight_talk.json"

[node name="Attack_instruction" parent="." instance=ExtResource( 26 )]
margin_left = 957.0
margin_top = 311.0
margin_right = 1485.0
margin_bottom = 367.0
rect_scale = Vector2( 1.1691, 1.21194 )
script = ExtResource( 30 )

[node name="barrier" type="StaticBody2D" parent="."]
position = Vector2( -18, 560 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="barrier"]
position = Vector2( 0, -22 )
shape = SubResource( 25 )

[node name="barrier2" type="StaticBody2D" parent="."]
position = Vector2( 2104, 552 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="barrier2"]
position = Vector2( -8, -22 )
shape = SubResource( 26 )

[node name="Main" type="Area2D" parent="."]
position = Vector2( 200, 536 )
script = ExtResource( 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Main"]
position = Vector2( -185, 0 )
shape = SubResource( 27 )

[node name="key_e" parent="Main" instance=ExtResource( 31 )]
position = Vector2( -184, -36 )
scale = Vector2( 1, 1.2 )

[node name="mini_hint" parent="Main" instance=ExtResource( 35 )]
margin_left = -194.0
margin_top = -92.0
margin_right = -194.0
margin_bottom = -92.0
rect_scale = Vector2( 0.481618, 0.800184 )
script = ExtResource( 36 )
instruction_text = "Go back"

[node name="MainPos" type="Position2D" parent="."]
position = Vector2( 48, 549 )

[node name="event_trigger4" type="Area2D" parent="."]
position = Vector2( 1912, 552 )
collision_layer = 8
collision_mask = 8
script = ExtResource( 34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="event_trigger4"]
position = Vector2( 0, -16 )
shape = SubResource( 28 )

[connection signal="body_entered" from="Bandit" to="Bandit" method="_on_Bandit_body_entered"]
[connection signal="body_exited" from="Bandit" to="Bandit" method="_on_Bandit_body_exited"]
[connection signal="body_entered" from="shady_guy_npc" to="shady_guy_npc" method="_on_shady_guy_npc_body_entered"]
[connection signal="body_exited" from="shady_guy_npc" to="shady_guy_npc" method="_on_shady_guy_npc_body_exited"]
[connection signal="show_desicion" from="shady_guy_npc/flexible_dialogues" to="shady_guy_npc/desicion_box" method="_on_flexible_dialogues_show_desicion"]
[connection signal="appeared" from="shady_guy_npc/desicion_box" to="shady_guy_npc" method="_on_desicion_box_appeared"]
[connection signal="desicion_taken" from="shady_guy_npc/desicion_box" to="shady_guy_npc/flexible_dialogues" method="_on_desicion_box_desicion_taken"]
[connection signal="disappear" from="shady_guy_npc/desicion_box" to="shady_guy_npc" method="_on_desicion_box_disappear"]
[connection signal="attack" from="lowborn_child" to="killable_knight" method="_on_lowborn_child_attack"]
[connection signal="attack" from="lowborn_child" to="Attack_instruction" method="_on_lowborn_child_attack"]
[connection signal="desicion_taken" from="lowborn_child/desicion_box" to="lowborn_child/flexible_dialogues" method="_on_desicion_box_desicion_taken"]
[connection signal="finished_dialogue" from="lowborn_child/flexible_dialogues" to="player" method="_on_flexible_dialogues_finished_dialogue"]
[connection signal="finished_dialogue" from="lowborn_child/flexible_dialogues" to="killable_knight" method="_on_flexible_dialogues_finished_dialogue"]
[connection signal="show_desicion" from="lowborn_child/flexible_dialogues" to="lowborn_child/desicion_box" method="_on_flexible_dialogues_show_desicion"]
[connection signal="timeout" from="lowborn_child/event_finished_timer" to="lowborn_child/flexible_dialogues" method="_on_event_finished_timer_timeout"]
[connection signal="bandit_girl_conversation" from="event_trigger" to="lowborn_child/flexible_dialogues" method="_on_event_trigger_bandit_girl_conversation"]
[connection signal="body_entered" from="event_trigger" to="event_trigger" method="_on_event_trigger_body_entered"]
[connection signal="body_entered" from="event_trigger2" to="event_trigger2" method="_on_event_trigger2_body_entered"]
[connection signal="guard_entered" from="event_trigger2" to="flexible_dialogues_kinght" method="_on_event_trigger2_guard_entered"]
[connection signal="finished_side_quest" from="player" to="lowborn_child" method="_on_player_finished_side_quest"]
[connection signal="last_talk" from="player" to="lowborn_child/event_finished_timer" method="_on_player_last_talk"]
[connection signal="timeout" from="killable_knight/death_timer" to="lowborn_child/flexible_dialogues" method="_on_death_timer_timeout"]
[connection signal="finished_dialogue" from="flexible_dialogues_kinght" to="lowborn_child" method="_on_flexible_dialogues_kinght_finished_dialogue"]
[connection signal="finished_dialogue" from="flexible_dialogues_kinght" to="player" method="_on_flexible_dialogues_kinght_finished_dialogue"]
[connection signal="finished_dialogue" from="flexible_dialogues_kinght" to="Attack_instruction" method="_on_flexible_dialogues_kinght_finished_dialogue"]
[connection signal="body_entered" from="Main" to="Main" method="_on_Main_body_entered"]
[connection signal="body_exited" from="Main" to="Main" method="_on_Main_body_exited"]
[connection signal="body_entered" from="event_trigger4" to="event_trigger4" method="_on_event_trigger4_body_entered"]
[connection signal="child_has_gone" from="event_trigger4" to="lowborn_child" method="_on_event_trigger4_child_has_gone"]
